# css-kustomize

./: .yamllint.yml  404.html  LICENSE  README.md  RELEASE_NAME_STRATEGY.md  VERSION_STRATEGY.md  dagger.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test-dagger.py  versions.json
.clinerules/: dagger-automation.md  documentation-strategy.md  markdown-formatting.md  python-exception-handling.md  python-formatting.md
.github/: README.md
.github/workflows/: ci.yml  dev.yml  release.yml  version-update.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/README-versioning/: index.html
0.1.0/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/README-versioning/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/search/: search_index.json
base/: deployment.yaml  kustomization.yaml  service.yaml
components/: README.md
components/custom-config/: configmap.yaml  deployment-patch.yaml  kustomization.yaml
components/env-vars/: deployment-patch.yaml
components/ingress/: deployment-patch.yaml  ingress.yaml  kustomization.yaml
components/metallb-loadbalancer/: service-patch.yaml
components/pvc/: deployment-patch.yaml  (+2 more)
dagger_pipeline/: __init__.py  main.py  pipeline.py
docs/: README-versioning.md  gen_ref_pages.py  index.md
manifests/: base.yaml  high-performance.yaml  local-proxmox.yaml  nodeport-dev.yaml  with-ingress-sparql.yaml  with-metallb.yaml  with-pvc.yaml  without-pvc.yaml
memory-bank/: INDEX.md  README.md  project-overview.md
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
(+126 files in other folders)
