[project]
name = "css-kustomize"
version = "0.2.0"
description = "Kubernetes manifests for Community Solid Server with Dagger automation"
authors = [
    {name = "Stephen Taylor"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "dagger-io>=0.9.0",
    "anyio>=4.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]


[project.scripts]
dagger-pipeline = "dagger_pipeline.main:cli"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "dagger_pipeline"}]

[tool.poetry.group.lint.dependencies]
yamllint = "^1.35.0"
pre-commit = "^3.6.0"
ruff = "^0.5.3"
mdformat = "^0.7.17"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.6.0"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.16.12"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.0"
mkdocs-autorefs = "^1.4.2"
griffe = "^1.4.0"
mike = "^2.1.0"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # Line too long
    "E722",  # Do not use bare except
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
